# stock_notifier

./: CMakeLists.txt  LICENSE  notifier.cpp
.github/workflows/: run_notifier.yml
